--- a/html-css/lesson6/task3/selectors.css
+++ b/html-css/lesson6/task3/selectors.css
@@ -10,8 +10,8 @@
   background-color: grey;
 }
 
-[data-description*='even'] {
-  background-color: grey;
+[data-description|='even'] {
+  font-size: 24px;
 }
 
 [href|='https://']
