--- a/html-css/lesson6/task3/selectors.css
+++ b/html-css/lesson6/task3/selectors.css
@@ -10,11 +10,11 @@
   background-color: grey;
 }
 
-[data-description|='even'] {
+[data-description*='even'] {
   font-size: 24px;
 }
 
-[href|='https://']
+[href*='https://']
 {
   color: green;
 }
