--- a/html-css/lesson7/task2/styles.css
+++ b/html-css/lesson7/task2/styles.css
@@ -16,6 +16,7 @@ li:nth-child(even) > span {
   margin-left: 16px;
 }
 
-.paragraphs:nth-child(odd) > p {
+div.paragraphs > p:nth-child(1),
+div.paragraphs > p:nth-child(4) {
   background-color: grey;
 }
