--- a/html-css/lesson7/task3/styles.css
+++ b/html-css/lesson7/task3/styles.css
@@ -4,10 +4,13 @@
   color: orange;
 }
 
-.theory::first-line {
-  font-size: 24px;
+.theory::selection {
   background-color: red;
   color: white;
+}
+
+.theory::first-line {
+  font-size: 24px;
 }
 
 a::before {
