--- a/html-css/lesson7/task5/styles.css
+++ b/html-css/lesson7/task5/styles.css
@@ -22,7 +22,7 @@ input {
   border: 3px solid red;
 }
 
-.hello {
+div > .hello {
   background-color: white;
 }
 
@@ -38,7 +38,7 @@ input[type='text'] {
   background-color: gray;
 }
 
-div:nth-child(3) > p {
+.bye {
   background-color: yellow;
 }
 
