--- a/html-css/lesson8/task2/styles.css
+++ b/html-css/lesson8/task2/styles.css
@@ -3,6 +3,7 @@ div {
   height: 140px;
   padding: 20px;
   margin: 50px 100px;
+  font-size: 24px;
   background-color: bisque;
   border-top: 10px solid firebrick;
   border-right: 20px solid chartreuse;
