--- a/html-css/lesson9/task5/styles.css
+++ b/html-css/lesson9/task5/styles.css
@@ -11,10 +11,10 @@ body {
 }
 
 .nav-list {
-  height: 40px;
+  line-height: 40px;
   list-style: none;
-  margin: 11px;
-  padding: 0px;
+  margin: 0px;
+  padding: 0px 26px;
   box-sizing: border-box;
 }
 
@@ -30,7 +30,7 @@ body {
 
 .head {
   position: relative;
-  top: 250px;
+  top: 150px;
   height: 200px;
   width: 200px;
   background-color: aquamarine;
