--- a/html-css/lesson10/task2/styles.css
+++ b/html-css/lesson10/task2/styles.css
@@ -1,10 +1,10 @@
 .block {
   height: 100px;
-  min-width: 100px;
+  flex-grow: 1;
+  width: 100px;
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
-  flex-grow: 1;
 }
