--- a/html-css/lesson10/task5/styles.css
+++ b/html-css/lesson10/task5/styles.css
@@ -10,4 +10,11 @@ h1 {
   margin: 8px;
   padding: 16px;
   background-color: bisque;
+  flex-basis: 300px;
+  flex-grow: 1;
+}
+
+.articles-list {
+  display: flex;
+  flex-wrap: wrap;
 }
