--- a/html-css/lesson10/task5/styles.css
+++ b/html-css/lesson10/task5/styles.css
@@ -3,14 +3,14 @@ header {
 }
 
 h1 {
-  margin: auto;
+  margin: 21.44px auto;
 }
 
 .article {
   margin: 8px;
   padding: 16px;
   background-color: bisque;
-  flex-basis: 300px;
+  flex-basis: 240px;
   flex-grow: 1;
 }
 
