--- a/html-css/lesson10/task5/styles.css
+++ b/html-css/lesson10/task5/styles.css
@@ -7,11 +7,11 @@ h1 {
 }
 
 .article {
+  box-sizing: border-box;
   margin: 8px;
   padding: 16px;
   background-color: bisque;
-  flex-grow: 1;
-  flex-basis: 300px;
+  flex: 1 0 300px;
 }
 
 .articles-list {
