--- a/html-css/lesson13/task1/styles.css
+++ b/html-css/lesson13/task1/styles.css
@@ -1,7 +1,7 @@
 div {
   height: 500px;
   width: 300px;
-  background-image: url(nature.jpeg);
+  background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+13/task1/nature.jpeg);
   background-position: center;
   background-size: cover;
   font-size: 32px;
