--- a/html-css/lesson13/task2/styles.css
+++ b/html-css/lesson13/task2/styles.css
@@ -1,7 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
 .icon {
   height: 100px;
   width: 100px;
   background-image: url(sprites.png);
+  background-position-x: -200px;
 }
 
 .icon:hover {
