--- a/html-css/lesson13/task2/styles.css
+++ b/html-css/lesson13/task2/styles.css
@@ -1,12 +1,8 @@
-* {
-  box-sizing: border-box;
-}
-
 .icon {
   margin: 100px;
   height: 100px;
   width: 100px;
-  background-image: url(sprites.png);
+  background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+13/task2/sprites.png);
   background-position-x: -200px;
 }
 
