--- a/html-css/lesson13/task4/styles.css
+++ b/html-css/lesson13/task4/styles.css
@@ -3,11 +3,12 @@
 }
 
 .image {
+  box-sizing: border-box;
   height: 200px;
   width: 200px;
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   margin: 16px;
-  border: thin dotted grey;
+  border: 1px dotted grey;
 }
