--- a/html-css/lesson15/task1/styles.css
+++ b/html-css/lesson15/task1/styles.css
@@ -1,7 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 .main-img {
   max-width: 100%;
   border-radius: 20px;
-  box-sizing: border-box;
   display: block;
   margin: 50px auto;
 }
