--- a/html-css/lesson16/task3/styles.css
+++ b/html-css/lesson16/task3/styles.css
@@ -1,26 +1,23 @@
-.checkbox {
-  position: relative;
-}
-
-label {
-  padding-left: 35px;
-  font-size: 24px;
-}
-
 input[type='checkbox'] {
   visibility: hidden;
   width: 0;
   height: 0;
-  margin: 0;
 }
 
 .check {
   width: 25px;
   height: 25px;
   background-color: #d3d3d3;
+  display: inline-block;
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.checkbox {
+  padding-left: 35px;
+  position: relative;
+  font-size: 24px;
 }
 
 .checkbox input:checked + .check {
