--- a/html-css/lesson16/task3/styles.css
+++ b/html-css/lesson16/task3/styles.css
@@ -1,5 +1,12 @@
+.checkbox {
+  padding-left: 35px;
+  position: relative;
+  font-size: 24px;
+  margin: 16px;
+}
+
 body {
-  margin: 15px;
+  margin: 0;
 }
 
 input[type='checkbox'] {
@@ -16,12 +23,6 @@ input[type='checkbox'] {
   position: absolute;
   top: 0;
   left: 0;
-}
-
-.checkbox {
-  padding-left: 35px;
-  position: relative;
-  font-size: 24px;
 }
 
 .checkbox input:checked + .check {
