--- a/html-css/lesson16/task3/styles.css
+++ b/html-css/lesson16/task3/styles.css
@@ -1,8 +1,11 @@
 .checkbox {
+  display: flex;
+  flex-direction: column;
   padding-left: 35px;
   position: relative;
   font-size: 24px;
   margin: 16px;
+  height: 50px;
 }
 
 body {
