--- a/html-css/lesson16/task3/styles.css
+++ b/html-css/lesson16/task3/styles.css
@@ -1,6 +1,7 @@
 .checkbox {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
+  display: block;
   padding-left: 35px;
   position: relative;
   font-size: 24px;
