--- a/html-css/lesson16/task3/styles.css
+++ b/html-css/lesson16/task3/styles.css
@@ -1,12 +1,12 @@
 .checkbox {
   /* display: flex;
   flex-direction: column; */
-  display: block;
+  display: inline-block;
   padding-left: 35px;
   position: relative;
   font-size: 24px;
   margin: 16px;
-  line-height: 24.7px;
+  line-height: 24.9px;
 }
 
 body {
