--- a/html-css/lesson16/task3/styles.css
+++ b/html-css/lesson16/task3/styles.css
@@ -2,7 +2,7 @@
   /* display: flex;
   flex-direction: column; */
   display: inline-block;
-  padding-left: 36px;
+  padding-left: 35px;
   position: relative;
   font-size: 24px;
   margin: 16px;
@@ -14,9 +14,7 @@ body {
 }
 
 input[type='checkbox'] {
-  visibility: hidden;
-  width: 0;
-  height: 0;
+  display: none;
 }
 
 .check {
