--- a/html-css/lesson16/task3/styles.css
+++ b/html-css/lesson16/task3/styles.css
@@ -6,8 +6,10 @@
   margin: 16px;
 }
 
-input[type='checkbox'] {
-  display: none;
+input {
+  visibility: hidden;
+  height: 0;
+  width: 0;
 }
 
 .check {
