--- a/html-css/lesson16/task4/styles.css
+++ b/html-css/lesson16/task4/styles.css
@@ -37,7 +37,8 @@ div input:required {
   border: 3px solid #f00;
 }
 
-label {
+.form-label {
+  display: inline-block;
   margin-bottom: 4px;
 }
 
@@ -45,7 +46,7 @@ button {
   width: 100%;
   height: 32px;
   background-color: #ff7f50;
-  margin-bottom: 16px;
+  margin-top: 16px;
   color: #fff;
   text-transform: uppercase;
   border-radius: 4px;
