--- a/html-css/lesson16/task4/styles.css
+++ b/html-css/lesson16/task4/styles.css
@@ -23,8 +23,11 @@ h1 {
   text-align: center;
 }
 
-div input {
+.form-control {
   margin-bottom: 8px;
+}
+
+div input {
   width: 100%;
   height: 32px;
   border-radius: 4px;
