--- a/html-css/lesson17/task2/styles.css
+++ b/html-css/lesson17/task2/styles.css
@@ -2,49 +2,47 @@
   box-sizing: border-box;
 }
 
-div {
-  overflow-x: auto;
-}
-
 table {
   width: 500px;
   margin: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+caption {
+  margin: 8px;
 }
 
 td,
 th,
 table {
-  border: 1px solid #000;
+  border: 1px solid black;
   border-collapse: collapse;
-}
-tr {
-  box-sizing: border-box;
 }
 
 th,
 td {
-  line-height: 31px;
   padding: 4px;
   text-align: right;
+  line-height: 40px;
 }
 
-tbody tr:nth-child(odd) {
-  background-color: #f2f2f2;
-}
-
-tbody tr:hover {
-  background-color: #aaa;
-  color: #fff;
-}
-
-thead {
+th {
   background-color: aqua;
+}
+
+div {
+  overflow-x: auto;
 }
 
 tfoot {
   font-weight: 700;
 }
 
-caption {
-  margin-bottom: 8px;
+tbody > tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+tbody > tr:hover {
+  background-color: #aaa;
+  color: #fff;
 }
