--- a/html-css/lesson17/task2/styles.css
+++ b/html-css/lesson17/task2/styles.css
@@ -5,11 +5,10 @@
 table {
   width: 500px;
   margin: 16px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 caption {
-  margin: 8px;
+  margin-bottom: 8px;
 }
 
 td,
@@ -23,7 +22,7 @@ th,
 td {
   padding: 4px;
   text-align: right;
-  line-height: 40px;
+  line-height: 30px;
 }
 
 th {
