--- a/html-css/lesson19/task3/styles.css
+++ b/html-css/lesson19/task3/styles.css
@@ -20,6 +20,7 @@
   animation-name: moving;
   animation-duration: 2s;
   animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
 }
 
 @keyframes moving {
