--- a/html-css/lesson19/task3/styles.css
+++ b/html-css/lesson19/task3/styles.css
@@ -20,7 +20,7 @@
   animation-name: moving;
   animation-duration: 2s;
   animation-iteration-count: infinite;
-  animation-direction: reverse;
+  animation-direction: alternate-reverse;
 }
 
 @keyframes moving {
@@ -29,7 +29,7 @@
     opacity: 1;
   }
   to {
-    left: 67px;
+    left: 70px;
   }
 }
 
