--- a/html-css/lesson19/task3/styles.css
+++ b/html-css/lesson19/task3/styles.css
@@ -1,18 +1,18 @@
-* {
-  box-sizing: border-box;
-}
-
 .container {
   display: flex;
   height: 100vh;
+  width: 100vw;
 }
 
 .spinner {
   margin: auto;
+  animation: blinking 2s infinite linear;
+}
+
+.spinner-text {
   font-family: monospace;
   text-transform: uppercase;
   font-size: 16px;
-  animation: blinking 2s infinite linear;
 }
 
 .rect {
@@ -21,10 +21,7 @@
   width: 10px;
   height: 4px;
   border-radius: 2px;
-  animation-name: moving;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+  animation: moving 2s infinite alternate-reverse;
 }
 
 @keyframes moving {
