--- a/html-css/lesson20/task3/styles.css
+++ b/html-css/lesson20/task3/styles.css
@@ -1,5 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 .container {
   height: 100vh;
+  width: 100vw;
   display: flex;
 }
 
@@ -27,7 +32,6 @@
 }
 
 .circle {
-  box-sizing: border-box;
   width: 50px;
   height: 50px;
   border: 4px solid lightgrey;
