--- a/html-css/lesson20/task3/styles.css
+++ b/html-css/lesson20/task3/styles.css
@@ -8,8 +8,11 @@
 }
 
 .spinner {
-  display: block;
+  display: flex;
   margin: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .spinner-text {
