--- a/html-css/lesson21/task3/styles.css
+++ b/html-css/lesson21/task3/styles.css
@@ -67,7 +67,7 @@ main {
 }
 
 .section__header {
-  font-size: 500%; /* 5rem - 5em */
+  font-size: 5vw; /* 5rem - 5em */
   text-align: center;
 }
 
