--- a/html-css/lesson21/task3/styles.css
+++ b/html-css/lesson21/task3/styles.css
@@ -57,6 +57,8 @@ main {
   padding: 0.5em;
   font-size: 1.25em;
   line-height: 1.75em;
+  display: flex;
+  flex-direction: column;
 }
 
 .css-units {
@@ -68,7 +70,7 @@ main {
 
 .section__header {
   font-size: 5vw; /* 5rem - 5em */
-  text-align: center;
+  margin: 59.76px auto;
   line-height: normal;
 }
 
