--- a/html-css/lesson22/task4/styles.css
+++ b/html-css/lesson22/task4/styles.css
@@ -29,24 +29,23 @@ button {
 
 .navigation {
   display: none;
-  padding: 0;
 }
 
 .nav-list {
-  padding: 0.5em; /* */
   list-style-type: none;
   width: 20%;
+  padding: 0.5em;
 }
 
 .nav-list-link {
   color: #fff;
   text-decoration: none;
+  margin: 0.5em; /* nav-list-item */
 }
 
 .nav-list-item {
   background-color: #808080;
   height: 2em;
-  margin: 0.5em; /* */
   padding: 0.5em;
   overflow: hidden;
   white-space: nowrap;
