--- a/html-css/lesson22/task5/styles.css
+++ b/html-css/lesson22/task5/styles.css
@@ -94,7 +94,7 @@ img {
   text-align: center;
   background-color: #e5e5e5;
   padding: 0.5em;
-  flex-shrink: 0;
+  flex-shrink: 1;
 }
 
 @media screen and (max-width: 599px) {
@@ -134,6 +134,7 @@ img {
 @media screen and (min-width: 1200px) {
   .main {
     flex-direction: row;
+    flex: 1 0 auto;
   }
 
   .main-block {
