--- a/html-css/lesson23/task3/styles/header.scss
+++ b/html-css/lesson23/task3/styles/header.scss
@@ -34,6 +34,7 @@
   align-items: start;
   color: #fff;
   margin: 0 0 0 3em;
+  padding: 0;
   text-transform: uppercase;
   &__item {
     padding: 0 8px;
