--- a/html-css/lesson24/task1/styles/header.scss
+++ b/html-css/lesson24/task1/styles/header.scss
@@ -45,7 +45,7 @@
   &__menu-icon {
     width: 18px;
     height: 13px;
-    background-image: url('../img/icon-hamburger.png');
+    background-image: url('https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png');
     display: inline-block;
   }
 }
@@ -75,7 +75,7 @@
   }
 
   &__arrow {
-    background-image: url('../img/arrow.png');
+    background-image: url('https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/arrow.png');
     margin-left: 11px;
     display: inline-block;
     width: 8px;
