--- a/html-css/lesson24/task1/styles/style.css
+++ b/html-css/lesson24/task1/styles/style.css
@@ -1195,7 +1195,7 @@
 .header__menu-icon {
   width: 18px;
   height: 13px;
-  background-image: url("../img/icon-hamburger.png");
+  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png");
   display: inline-block;
 }
 
@@ -1222,7 +1222,7 @@
   font-weight: 700;
 }
 .navigation__arrow {
-  background-image: url("../img/arrow.png");
+  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/arrow.png");
   margin-left: 11px;
   display: inline-block;
   width: 8px;
