--- a/html-css/lesson24/task1/styles/audience.scss
+++ b/html-css/lesson24/task1/styles/audience.scss
@@ -4,6 +4,8 @@
 
   @include for-large-up {
     padding: 108px 131px 110px 130px;
+    width: 1400px;
+    margin: 0 auto;
   }
 
   &__started {
@@ -41,14 +43,15 @@
   }
 
   &__description {
-    margin-top: 0;
-    margin-bottom: 30px;
+    margin: 0 auto 30px auto;
     font-size: 24px;
     line-height: 34px;
     text-align: center;
+    width: 290px;
 
     @include for-large-up {
       margin-bottom: 34px;
+      width: 555px;
     }
   }
 
