--- a/html-css/lesson24/task1/styles/header.scss
+++ b/html-css/lesson24/task1/styles/header.scss
@@ -13,12 +13,14 @@
   display: flex;
   align-items: center;
   padding-left: 15px;
+  background-color: #fff;
 
   @include for-large-up {
     width: 1140px;
     height: 62px;
     margin: auto;
     display: flex;
+    background-color: #f3c6bd;
   }
 
   &__button {
@@ -41,12 +43,12 @@
     }
   }
 
-  &__menu-icon {
-    width: 18px;
-    height: 13px;
-    background-image: url('https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png');
-    display: inline-block;
-  }
+  // &__menu-icon {
+  //   width: 18px;
+  //   height: 13px;
+  //   background-image: url('https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png');
+  //   display: inline-block;
+  // }
 }
 
 .navigation {
