--- a/html-css/lesson24/task1/styles/headline.scss
+++ b/html-css/lesson24/task1/styles/headline.scss
@@ -21,6 +21,8 @@
   }
 
   &__title {
+    margin-top: 0;
+    margin-bottom: 24px;
     font-weight: 700;
     font-size: 50px;
     line-height: 50px;
@@ -38,12 +40,12 @@
   }
 
   &__description {
-    margin-top: 34px;
-    margin-bottom: 0;
+    margin-bottom: 30px;
     font-size: 24px;
     line-height: 34px;
 
     @include for-large-up {
+      margin-bottom: 0;
       margin-top: 34px;
       width: 456px;
       height: 102px;
@@ -54,8 +56,6 @@
   }
 
   &__actions {
-    margin-top: 30px;
-
     @include for-large-up {
       margin-top: 58px;
       display: flex;
