--- a/html-css/lesson24/task1/styles/order.scss
+++ b/html-css/lesson24/task1/styles/order.scss
@@ -4,6 +4,8 @@
 
   @include for-large-up {
     padding: 73px 0 72px 0;
+    width: 1400px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -13,13 +15,21 @@
     max-width: 555px;
   }
 
-  &__illustration {
-    max-width: 200px;
+  &__img {
+    width: 200px;
+    margin: 0 auto;
 
     @include for-large-up {
-      min-width: 269px;
-      margin-right: 121px;
+      width: 269.41px;
+      margin-right: 121.59px;
+      margin-left: 224px;
+      height: 296px;
     }
+  }
+
+  &__illustration {
+    width: 100%;
+    height: 100%;
   }
 
   &__title {
@@ -29,13 +39,24 @@
     text-align: center;
     letter-spacing: -0.25px;
     margin-top: 40px;
+    margin-bottom: 18px;
+
+    @include for-large-up {
+      text-align: start;
+      margin-top: 33px;
+      margin-bottom: 12px;
+    }
   }
 
   &__text {
     font-size: 22px;
     line-height: 32px;
     margin: 0;
-    margin-top: 18px;
+    height: 167px;
+
+    @include for-large-up {
+      height: auto;
+    }
   }
 
   &__form {
@@ -84,6 +105,8 @@
     font-size: 14px;
     line-height: 22px;
     color: $text-color-light-grey;
+    margin-top: 10px; /**/
+    margin-bottom: 0;
   }
 
   &__terms-link {
