--- a/html-css/lesson24/task1/styles/style.css
+++ b/html-css/lesson24/task1/styles/style.css
@@ -264,6 +264,8 @@
 @media screen and (min-width: 1400px) {
   .audience {
     padding: 108px 131px 110px 130px;
+    width: 1400px;
+    margin: 0 auto;
   }
 }
 .audience__started {
@@ -300,15 +302,16 @@
   }
 }
 .audience__description {
-  margin-top: 0;
-  margin-bottom: 30px;
+  margin: 0 auto 30px auto;
   font-size: 24px;
   line-height: 34px;
   text-align: center;
+  width: 290px;
 }
 @media screen and (min-width: 1400px) {
   .audience__description {
     margin-bottom: 34px;
+    width: 555px;
   }
 }
 .audience__buttons {
@@ -675,6 +678,8 @@
 @media screen and (min-width: 1400px) {
   .order {
     padding: 73px 0 72px 0;
+    width: 1400px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -683,14 +688,21 @@
 .order__details {
   max-width: 555px;
 }
-.order__illustration {
-  max-width: 200px;
+.order__img {
+  width: 200px;
+  margin: 0 auto;
 }
 @media screen and (min-width: 1400px) {
-  .order__illustration {
-    min-width: 269px;
-    margin-right: 121px;
+  .order__img {
+    width: 269.41px;
+    margin-right: 121.59px;
+    margin-left: 224px;
+    height: 296px;
   }
+}
+.order__illustration {
+  width: 100%;
+  height: 100%;
 }
 .order__title {
   font-weight: 700;
@@ -699,12 +711,25 @@
   text-align: center;
   letter-spacing: -0.25px;
   margin-top: 40px;
+  margin-bottom: 18px;
+}
+@media screen and (min-width: 1400px) {
+  .order__title {
+    text-align: start;
+    margin-top: 33px;
+    margin-bottom: 12px;
+  }
 }
 .order__text {
   font-size: 22px;
   line-height: 32px;
   margin: 0;
-  margin-top: 18px;
+  height: 167px;
+}
+@media screen and (min-width: 1400px) {
+  .order__text {
+    height: auto;
+  }
 }
 @media screen and (min-width: 1400px) {
   .order__form {
@@ -751,6 +776,9 @@
   font-size: 14px;
   line-height: 22px;
   color: #2b292d99;
+  margin-top: 10px;
+  /**/
+  margin-bottom: 0;
 }
 .order__terms-link {
   color: #3142c6;
@@ -962,6 +990,13 @@
   display: flex;
   flex-direction: column;
 }
+@media screen and (min-width: 1400px) {
+  .footer {
+    width: 1400px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
 .footer-navigation {
   margin: 0;
   display: flex;
@@ -1161,6 +1196,7 @@
   display: flex;
   align-items: center;
   padding-left: 15px;
+  background-color: #fff;
 }
 @media screen and (min-width: 1400px) {
   .header {
@@ -1168,6 +1204,7 @@
     height: 62px;
     margin: auto;
     display: flex;
+    background-color: #f3c6bd;
   }
 }
 .header__button {
@@ -1190,12 +1227,6 @@
   .header__menu-button {
     display: none;
   }
-}
-.header__menu-icon {
-  width: 18px;
-  height: 13px;
-  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png");
-  display: inline-block;
 }
 
 .navigation {
@@ -1289,6 +1320,8 @@
   }
 }
 .headline__title {
+  margin-top: 0;
+  margin-bottom: 24px;
   font-weight: 700;
   font-size: 50px;
   line-height: 50px;
@@ -1306,13 +1339,13 @@
   }
 }
 .headline__description {
-  margin-top: 34px;
-  margin-bottom: 0;
+  margin-bottom: 30px;
   font-size: 24px;
   line-height: 34px;
 }
 @media screen and (min-width: 1400px) {
   .headline__description {
+    margin-bottom: 0;
     margin-top: 34px;
     width: 456px;
     height: 102px;
@@ -1320,9 +1353,6 @@
     line-height: 34px;
     z-index: 1;
   }
-}
-.headline__actions {
-  margin-top: 30px;
 }
 @media screen and (min-width: 1400px) {
   .headline__actions {
