--- a/html-css/lesson24/task1/styles/style.css
+++ b/html-css/lesson24/task1/styles/style.css
@@ -317,11 +317,13 @@
 .audience__buttons {
   display: flex;
   flex-direction: column;
+  width: 290px;
+  margin: auto;
 }
 @media screen and (min-width: 1400px) {
   .audience__buttons {
     flex-direction: row;
-    margin: auto;
+    width: auto;
   }
 }
 .audience__cards {
@@ -681,7 +683,7 @@
     width: 1400px;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: flex-start;
   }
 }
@@ -718,6 +720,7 @@
     text-align: start;
     margin-top: 33px;
     margin-bottom: 12px;
+    height: 48px;
   }
 }
 .order__text {
@@ -1221,7 +1224,7 @@
   border: none;
   border-left: 1px solid #00000026;
   background-color: #fff;
-  margin-left: auto;
+  margin-right: auto;
 }
 @media screen and (min-width: 1400px) {
   .header__menu-button {
@@ -1278,6 +1281,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-right: 74px;
+}
+@media screen and (min-width: 1400px) {
+  .logo__text {
+    padding-right: 0;
+  }
 }
 .logo__name {
   font-size: 20px;
@@ -1342,6 +1351,7 @@
   margin-bottom: 30px;
   font-size: 24px;
   line-height: 34px;
+  width: 290px;
 }
 @media screen and (min-width: 1400px) {
   .headline__description {
