--- a/html-css/lesson24/task1/styles/headline.scss
+++ b/html-css/lesson24/task1/styles/headline.scss
@@ -43,6 +43,7 @@
     margin-bottom: 30px;
     font-size: 24px;
     line-height: 34px;
+    width: 290px;
 
     @include for-large-up {
       margin-bottom: 0;
