--- a/html-css/lesson24/task1/styles/order.scss
+++ b/html-css/lesson24/task1/styles/order.scss
@@ -7,7 +7,7 @@
     width: 1400px;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: flex-start;
   }
 
@@ -45,6 +45,7 @@
       text-align: start;
       margin-top: 33px;
       margin-bottom: 12px;
+      height: 48px;
     }
   }
 
