add some changes to test

--- a/html-css/lesson24/task1/styles/header.scss
+++ b/html-css/lesson24/task1/styles/header.scss
@@ -1,9 +1,12 @@
 .top-section {
   background-color: #f3c6bd;
+  width: 320px; // have delete
+  margin: 0 auto; // have delete
 
   @include for-large-up {
     padding-top: 39px;
     background-color: #f3c6bd;
+    width: auto;
   }
 }
 
