--- a/html-css/lesson24/task1/styles/audience.scss
+++ b/html-css/lesson24/task1/styles/audience.scss
@@ -1,11 +1,12 @@
 .audience {
   background-color: rgb(0, 161, 198, 0.07);
   padding: 50px 15px;
+  width: 320px; // delete
+  margin: 0 auto;
 
   @include for-large-up {
     padding: 108px 131px 110px 130px;
     width: 1400px;
-    margin: 0 auto;
   }
 
   &__started {
