--- a/html-css/lesson24/task1/styles/audience.scss
+++ b/html-css/lesson24/task1/styles/audience.scss
@@ -1,7 +1,7 @@
 .audience {
   background-color: rgb(0, 161, 198, 0.07);
   padding: 50px 15px;
-  width: 320px; // delete
+  width: 320px; // have delete
   margin: 0 auto;
 
   @include for-large-up {
