--- a/html-css/lesson25/task1/styles/styles.css
+++ b/html-css/lesson25/task1/styles/styles.css
@@ -40,7 +40,7 @@
 .price-card__head-blue {
   width: 163px;
 }
-.price-card__price {
+.price-card__title {
   font-size: 35px;
   line-height: 43px;
   margin: 0;
@@ -49,6 +49,13 @@
   font-size: 20px;
   line-height: 24px;
   margin: 0;
+}
+.price-card__price {
+  margin: 0;
+  padding: 19px 0;
+  font-size: 55px;
+  line-height: 67px;
+  text-align: center;
 }
 .price-card__popular {
   background-color: #dc3f45;
@@ -65,13 +72,6 @@
 }
 .price-card__options-list {
   margin: 0;
-}
-.price__how-much {
-  margin: 0;
-  padding: 19px 0;
-  font-size: 55px;
-  line-height: 67px;
-  text-align: center;
 }
 .price__info {
   font-weight: 300;
@@ -97,6 +97,12 @@
 }
 .price__profit-img-green {
   background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png);
+}
+.price__profit-img-blue {
+  background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png);
+}
+.price__profit-img-orange {
+  background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png);
 }
 .price__profit-item {
   font-weight: 300;
