--- a/html-css/lesson25/task1/styles/price-card.scss
+++ b/html-css/lesson25/task1/styles/price-card.scss
@@ -2,7 +2,7 @@
   &-product {
     background-color: #141b1c;
     display: flex;
-    padding: 70px 132px;
+    padding: 70px 132px; // 115px 132px
   }
 
   &-card {
